provisioning/cni/weave/weave-scope-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-scope-app-ingress
  namespace: weave
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "weave.blah.blubb"
    http:
      paths:
      - path: /scope/(.*)
        backend:
          serviceName: weave-scope-app
          servicePort: 80
